Création de la page d'accueil et de la maquette

--- a/Design - fischerda/HTML - view/MyPets.html
+++ b/Design - fischerda/HTML - view/MyPets.html
@@ -3,8 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <title>Mes Animaux</title>
+    <link rel="stylesheet" href="base.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
+<header>
+    <h1 id="anchor">Pet Factor</h1>
+</header>
 
+<!--
+Body
+-->
+<div>
+    <!--
+    Navigation
+    -->
+
+    <div class="w3-top">
+        <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+            <a href="Home.html" class="w3-bar-item w3-button">PetFactor</a>
+            <!-- Right-sided navbar links. Hide them on small screens -->
+            <div class="w3-right w3-hide-small">
+                <a  href="MyPets.html" class="w3-bar-item w3-button">Mes Animaux</a>
+            </div>
+        </div>
+    </div>
+
+    <!--
+    Content
+    -->
+
+
+    <div class="w3-content" style="max-width:1100px">
+
+
+
+
+
+
+
+
+
+    </div>
+
+
+
+
+</div>
+<footer class="footer">
+    <!--
+    Left side
+    -->
+    <div id="left" class="MoulinSA">
+        <ul>
+            <li>
+                <a href="Home.html">Accueil</a>
+            </li>
+            <li>
+                <a href="MyPets.html">Mes animaux</a>
+            </li>
+            <li>
+                <a href="Account.html">Mon compte</a>
+            </li>
+        </ul>
+    </div>
+    <!--
+    Middle side
+    -->
+    <div class="arrow">
+        <a href="#anchor"><img  src="image/whiteArrow.png" alt="arrow up"></a>
+    </div>
+    <!--
+    Right side
+    -->
+    <div id="right" class="MoulinSA">
+        <h3>Site créé par Moulin SA</h3>
+        <h5>Équipe de développement :</h5>
+        <ul>
+            <li>David Fischer</li>
+            <li>Grégory Briand</li>
+            <li>Len Henchoz</li>
+            <li>Géraud Silvestri</li>
+            <li>Rodrigo Silva Martins</li>
+            <li>Ricardo Cardoso Oliveira</li>
+        </ul>
+    </div>
+</footer>
 </body>
 </html>
+
+
+
+
